--- a/style.css
+++ b/style.css
@@ -1,3 +1,93 @@
-body{
-    background-color: antiquewhite;
+*{
+    margin: 0;
+    padding: 0;
 }
+
+.font-inter {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  
+}
+.navber{
+    background:#1A0B2E ;
+}
+.techwave {
+    height: 32px;
+    width: 219px;
+  
+    color: white;
+}
+
+.techwave span {
+    background: linear-gradient(90deg, #F7E93F, #FB09B4, #9100F8);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.nav-mid ul{
+    list-style: none;
+    display: flex;
+     gap: 32px;
+    
+}
+.nav-mid a{
+   
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: capitalize;
+     text-decoration: none;
+    color:#FFFFFF ;
+
+}
+.btn1{
+    padding: 12px 16px;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 600;
+    width: 135px;
+    height: 44px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+     background: linear-gradient(90deg, #F7E93F, #FB09B4, #9100F8);
+     border-radius: 10000px;
+
+}
+.btn1 .arrow {
+    width: 20px;
+    height: 20px;
+}
+.navber{
+    padding: 36px 5%;
+    display: flex;
+    justify-content: space-between;
+
+}
+.container-1{
+    background-image: url("./assets/hero-bg.png");
+    width: 100%;
+    height: 760px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.hero-1{
+    background-image: url("./assets/hero-circle.png");
+    width: 350px;
+    height: 350px;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+
+
+}
+.hero-1 img{
+    width: 200px;
+    height: 200px;
+}
+
+/* .up-container{
+    background-color:#1A0B2E;
+} */
+
